white space fixed

--- a/style.css
+++ b/style.css
@@ -858,11 +858,6 @@ footer {
 	display: block;
 }
 
-.post,
-.page {
-	margin: 0 0 1.5em;
-}
-
 .updated:not(.published) {
 	display: none;
 }
